# color_differernt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Functional dependencies.md  Module structure.md  app.py  config.yaml  pyproject.toml  readme.md  readme_new.md  requirements.txt  setup.py  trace_fs.py
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
.specstory/history/: 2025-07-03_08-37Z-image-processing-errors-and-troubleshooting.md  2025-07-04_03-20Z-fix-cjk-issues-and-improve-gradio-layout.md  2025-07-04_05-06Z-reorganize-gradio-app-structure.md  2025-07-04_06-57Z-gradio-app-startup-troubleshooting.md  2025-07-04_07-26Z-fix-gradio-demo-not-found-error.md  2025-07-05_05-07Z-merge-icc-files-from-main-to-feature-branch.md  2025-07-05_06-46Z-refactor-gui-for-better-readability.md  2025-07-05_09-24Z-rewrite-preview-using-icc-trans.md  2025-07-06_04-24Z-merge-and-organize-color-settings.md  2025-07-06_05-52Z-fix-ci-pipeline-error-on-sync-command.md  2025-07-06_06-11Z-implementing-cmyk-calibration-method.md  2025-07-06_08-47Z-organize-color-folder-and-update-code.md  2025-07-06_08-57Z-change-color-conversion-method-and-remove-duplicates.md  2025-07-07_00-38Z-fix-the-issue.md  2025-07-07_09-24Z-why-the-png-and-tiff-is-not-worked-properly-in.md  2025-07-07_09-47Z-generate-color-checker-images-and-translate-comments.md  2025-07-08_01-39Z-integrate-checker-into-gradio-interface.md  2025-07-08_03-00Z-color-checkers-and-palette-preview-issues.md  2025-07-08_03-14Z-generate-cmyk-basic-color-checker.md  2025-07-08_05-01Z-update-generator-for-cmyk-handling.md  2025-07-08_05-34Z-generate-zipped-files-and-documentation.md  2025-07-08_06-13Z-add-precommit-config-for-cache-clearing.md  2025-07-08_06-39Z-allow-commit-with-unstaged-changes.md  2025-07-08_07-27Z-integrate-cmyk-calibration-in-gradio-app.md  2025-07-10_00-40Z-add-block-detection-feature-to-gradio-app.md  2025-07-10_03-40Z-resolve-merge-conflict-issue.md  2025-07-10_05-34Z-fix-the-issue.md  2025-07-10_05-52Z-block-detection-results-and-colorbar-mapping.md  2025-07-10_09-49Z-fix-the-issue.md  2025-07-10_09-54Z-fix-the-issue.md  2025-07-10_10-11Z-fix-the-issue.md  2025-07-11_01-26Z-enhance-color-bar-detection-results.md  2025-07-11_07-06Z-rewrite-colorbar-analysis-for-delta-e-calculation.md  2025-07-12_07-01Z-update-color-conversion-utilities.md  2025-07-12_07-19Z-redesign-colorbar-analysis-tool.md  2025-07-12_07-56Z-make-result-ui-more-compact-and-fix-colors.md  2025-07-12_09-16Z-create-colorbar-detection-tab.md  2025-07-12_10-47Z-fixing-color-delta-e-discrepancy.md  2025-07-13_06-34Z-improve-demo-color-analysis-and-layout.md  2025-07-13_06-51Z-revise-colorbar-analysis-and-demo-structure.md  (+1 more)
core/block_detection/: blocks_detect.py  color_analysis.py  colorbar_analysis.py  pure_colorbar_analysis.py  yolo_block_detection.py  yolo_show.py
core/color/: README_CALIBRATION.md  __init__.py  calibration_demo.py  ground_truth_checker.py  icc.py  icc_trans.py  palette_configs.py  palette_generator.py  utils.py
core/color/calibration/: __init__.py  colorspace.py  lut_builder.py  measurement.py  pipeline.py  target_chart.py
core/image/: alignment.py  count.py  loader.py  masking.py  preprocessor.py
core/image/features/: detector.py  matcher.py  processor.py
core/utils/: folder_detect.py  ocr_detect.py  ocr_folder_test.py
interface/: __init__.py  config.py  gui.py  processing.py
interface/components/: color_checker.py  colorbar_analysis.py  ground_truth_colorbar_demo.py  preview.py  pure_colorbar_analysis.py  results.py  settings.py  shared_results.py
interface/handlers/: callbacks.py
scripts/: clean.sh  cleanup.py
tests/: conftest.py  test_cmyk_calibration.py  test_color.py  test_colorbar_analysis_redesigned.py  test_ground_truth_checker.py  test_image.py  test_pure_colorbar_analysis.py
visualization/: blockwise.py  charts.py  covermap.py  heatmap.py
